fix: spacing fixes for splitanimate and spotlight

--- a/src/components/SplitAnimate/index.module.scss
+++ b/src/components/SplitAnimate/index.module.scss
@@ -3,7 +3,6 @@
   overflow: hidden;
   min-height: 1.1em;
   margin-bottom: -1.1em;
-  margin-right: 0.2em;
 }
 
 .innerWord {
